2014-11-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (get_initial_file) <inexact dir lookup>: Check if 
	file referred to exists.
	* info/t/dir-dangling-entry.sh: New test.

2014-11-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Add at most one node to 
	the window history.
	(info_search_internal): Call free_history_node on nodes where no 
	match was found.
	(info_search_in_node_internal): Remove unnecessary conditional 
	checks.

	* info/t/inc-sea-history.sh: New test.

2014-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (dir_entry_of_infodir): Don't free a node too 
	early.

2014-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Look up pressed keys in 
	info_keymap and echo_area_keymap.  Do not hard-code any keys for 
	particular commands.

2014-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (ask_for_search_string): Return 1 for empty 
	input, and 0 only when it was aborted.
	(info_search_case_sensitively, info_search)
	(info_search_backward): Set last_search_direction and 
	last_search_case sensitive in info_search_1.  Call 
	ask_for_search_string in info_search_1.  Perform search if 
	default search string was accepted.

2014-11-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert) <@quotation with
	@author>: Check if @smallquotation was used as well.  Report
	from Mahlon Smith.

2014-11-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\footnote): do not set \indent and \noindent
	to their \ptex... versions; these become global settings, and seem
	unnecessary since the only time we redefine \indent and \noindent
	is with @firstparagraphindent for section headings, and footnotes
	cannot work in headings anyway.  What am I missing?  Could not
	construct an example where it mattered.
	(\errfootnoteheading): new macro, for \chapmacro and \sectionheading.
	(\errfootnotenest): rename from \errfootnote.